[gd_scene load_steps=11 format=3 uid="uid://2sl4px8rsn2y"]

[ext_resource type="Texture2D" uid="uid://n54ru2ysamp7" path="res://assets/icons/spells/player/19.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bpn4383y6cai2" path="res://assets/icons/spells/player/7.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cynhrct8x8wco" path="res://assets/icons/spells/player/16.png" id="3"]
[ext_resource type="Texture2D" uid="uid://c62kos13c6c3e" path="res://assets/icons/spells/player/48.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bxv75ngrpmrq3" path="res://assets/icons/spells/player/40.png" id="5"]
[ext_resource type="Texture2D" uid="uid://ymq1t13dpxqs" path="res://assets/icons/spells/player/32.png" id="6"]
[ext_resource type="Script" path="res://src/objects/ui/SpellBox.gd" id="7"]
[ext_resource type="FontFile" uid="uid://8k3yck5k4s37" path="res://assets/fonts/WigglyCurvesRegular.ttf" id="8"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("8"), ExtResource("8")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("8"), ExtResource("8")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="SpellBox" type="Node2D"]
script = ExtResource("7")

[node name="HealSpell" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3")

[node name="IncreaseDamageSpell" type="TextureRect" parent="."]
offset_left = 128.0
offset_right = 640.0
offset_bottom = 512.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("5")

[node name="EnemySkipSpell" type="TextureRect" parent="."]
offset_left = 128.0
offset_top = 128.0
offset_right = 640.0
offset_bottom = 640.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("6")

[node name="RandomLineSpell" type="TextureRect" parent="."]
offset_top = 128.0
offset_right = 512.0
offset_bottom = 640.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1")

[node name="ReflectDamageSpell" type="TextureRect" parent="."]
offset_top = 256.0
offset_right = 512.0
offset_bottom = 768.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2")

[node name="RegenSpaceSpell" type="TextureRect" parent="."]
offset_left = 128.0
offset_top = 256.0
offset_right = 640.0
offset_bottom = 768.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("4")

[node name="SelectLabel" type="Label" parent="."]
offset_right = 104.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(0.913725, 0.054902, 0.054902, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 64
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealSpellLabel" type="Label" parent="."]
offset_left = 88.0
offset_top = 88.0
offset_right = 104.0
offset_bottom = 102.0
theme_override_colors/font_color = Color(0.160784, 0.431373, 0.854902, 1)
theme_override_fonts/font = SubResource("2")
text = "23"

[node name="IncreaseDamageSpellLabel" type="Label" parent="."]
offset_left = 216.0
offset_top = 88.0
offset_right = 232.0
offset_bottom = 102.0
theme_override_colors/font_color = Color(0.160784, 0.431373, 0.854902, 1)
theme_override_fonts/font = SubResource("2")
text = "23"

[node name="RandomLineSpellLabel" type="Label" parent="."]
offset_left = 88.0
offset_top = 216.0
offset_right = 104.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0.160784, 0.431373, 0.854902, 1)
theme_override_fonts/font = SubResource("2")
text = "23"

[node name="EnemySkipSpellLabel" type="Label" parent="."]
offset_left = 216.0
offset_top = 216.0
offset_right = 232.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0.160784, 0.431373, 0.854902, 1)
theme_override_fonts/font = SubResource("2")
text = "23"

[node name="RegenSpaceSpellLabel" type="Label" parent="."]
offset_left = 216.0
offset_top = 344.0
offset_right = 232.0
offset_bottom = 358.0
theme_override_colors/font_color = Color(0.160784, 0.431373, 0.854902, 1)
theme_override_fonts/font = SubResource("2")
text = "23"

[node name="ReflectDamageSpellLabel" type="Label" parent="."]
offset_left = 88.0
offset_top = 344.0
offset_right = 104.0
offset_bottom = 358.0
theme_override_colors/font_color = Color(0.160784, 0.431373, 0.854902, 1)
theme_override_fonts/font = SubResource("2")
text = "23"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="gui_input" from="HealSpell" to="." method="_on_HealSpell_gui_input"]
[connection signal="gui_input" from="IncreaseDamageSpell" to="." method="_on_IncreaseDamageSpell_gui_input"]
[connection signal="gui_input" from="EnemySkipSpell" to="." method="_on_EnemySkipSpell_gui_input"]
[connection signal="gui_input" from="RandomLineSpell" to="." method="_on_RandomLineSpell_gui_input"]
[connection signal="gui_input" from="ReflectDamageSpell" to="." method="_on_ReflectDamageSpell_gui_input"]
[connection signal="gui_input" from="RegenSpaceSpell" to="." method="_on_RegenSpaceSpell_gui_input"]
